Avoid scrollbars in sidebar.

--- a/site/sidebar/style.css
+++ b/site/sidebar/style.css
@@ -10,6 +10,7 @@ body {
   display: grid;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 #root {
